<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Filter"
    android:orientation="vertical"
    android:background="#edebee"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:orientation="horizontal"
        android:background="@mipmap/aboutme_orange_toolbar_rectangle"
        >
        <ImageView
            android:id="@+id/iv_back_filter"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/aboutme_left_arrow"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/airbnbcerealmedium"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/airbnbcerealbook"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_10sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@mipmap/mid_content_white_rectangle"
        android:paddingTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_15sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="#242424"
            android:fontFamily="@font/airbnbcerealbook"
            android:textSize="@dimen/_13ssp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:id="@+id/tv_filter_nature"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/nature"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_marginEnd="@dimen/_10sdp"

                />
            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/sport"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_marginEnd="@dimen/_10sdp"
                />
            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/fashion"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/business"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_marginEnd="@dimen/_10sdp"

                />
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/animal"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_orange_rectangle"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_marginEnd="@dimen/_10sdp"
                />
        </LinearLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/distance"
          android:layout_marginTop="@dimen/_20sdp"
          android:textSize="@dimen/_13sdp"
          android:textColor="#242424"
          android:fontFamily="@font/airbnbcerealbook"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textSize="@dimen/_10ssp"
                android:textColor="#80242424"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_weight="1"

                />
            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@mipmap/filter_location"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_20sdp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/max"
            android:textSize="@dimen/_9ssp"
            android:fontFamily="@font/airbnbcerealbook"
            android:textColor="#363636"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mile"
            android:gravity="end"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/orangish"
            android:fontFamily="@font/airbnbcerealbook"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_4sdp"

            >
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_4sdp"
                android:src="@mipmap/filter_orange_line"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#26000000"
                android:layout_gravity="center"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_13sdp"
            android:textColor="#242424"
            android:fontFamily="@font/airbnbcerealbook"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/today"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_marginEnd="@dimen/_10sdp"

                />
            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/this_week"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"
                android:layout_marginEnd="@dimen/_10sdp"
                />
            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/this_month"
                android:gravity="center"
                android:textColor="#cc242424"
                android:textSize="@dimen/_10ssp"
                android:background="@mipmap/filter_grey_rectangle"
                android:fontFamily="@font/airbnbcerealbook"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/this_year"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:background="@mipmap/filter_orange_rectangle"
            android:fontFamily="@font/airbnbcerealbook"/>


    </LinearLayout>
    <Button
        android:id="@+id/btn_filter_apply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:background="@mipmap/filter_rectangle_bottom_orange"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/airbnbcerealbold"
        android:gravity="center"
        android:layout_gravity="bottom"
        />
</LinearLayout>
</layout>