<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#edebee"
    tools:context=".activity.Privacy">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@mipmap/aboutme_orange_toolbar_rectangle"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_back_privacy"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/aboutme_left_arrow"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/privacy"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/airbnbcerealmedium"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_blocked_account"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/blocked_account"
        android:paddingStart="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/airbnbcerealbook"
        android:background="@mipmap/myrewards_data_bg"/>
    <TextView
        android:id="@+id/tv_privacy_muted_account"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/muted_account"
        android:paddingStart="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/airbnbcerealbook"
        android:background="@mipmap/myrewards_data_bg"/>

</LinearLayout>
</layout>