<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="@dimen/_30sdp"
    >


        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:background="@drawable/alertdialogbox"
            android:layout_height="@dimen/_150sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                >
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:gravity="center"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/airbnbcerealmedium"

                    />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_sure"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/airbnbcerealbook"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#d1d1d1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <TextView
                    android:id="@+id/tv_logout_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                   android:fontFamily="@font/airbnbcerealbook"
                    />
                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"

                    android:background="#d1d1d1"
                    />
                <TextView
                    android:id="@+id/tv_logout_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/airbnbcerealbook"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>